2010-03-07  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asapconv.c, win32/bass/bass_asap.c: ASAP_DateToYear()


2010-03-02  Piotr Fusik  <fox@scene.pl>
* xmms/libasap-xmms.c: fix for big endian machines


2010-02-19  Piotr Fusik  <fox@scene.pl>
* win32/bass/bass_asap.c: implemented ID3 tag, unfortunately AIMP2
  doesn't ask for it

* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: BASS add-on for AIMP

* win32/setup/license.rtf: updated years


2010-02-12  Piotr Fusik  <fox@scene.pl>
* win32/gui.rc, win32/Makefile: VERSIONINFO resource for BASS add-on


2010-02-11  Piotr Fusik  <fox@scene.pl>
* win32/bass/bass_asap.c, win32/bass/bass.h, win32/bass/bass.lib,
  win32/bass/bass-addon.h, win32/Makefile, README, INSTALL, PORTS.xml:
  BASS add-on


2010-02-10  Piotr Fusik  <fox@scene.pl>
* win32/xmplay/xmp-asap.c: fixed crash when adding many files


2010-02-03  Piotr Fusik  <fox@scene.pl>
* win32/gui.rc: corrected FILETYPE for DLLs


** 2.1.0 released on 2010-02-02

2010-02-01  Piotr Fusik  <fox@scene.pl>
* asapconv.c, win32/Makefile: MP3 output using LAME


2010-01-30  Piotr Fusik  <fox@scene.pl>
* asapconv.c: support %a, %n and %d output filename placeholders


2010-01-26  Piotr Fusik  <fox@scene.pl>
* win32/setup/asap.wxs, win32/setup/wix_mutex.pl: XMPlay file associations

* win32/xmplay/xmp-asap.c: got seek working

* win32/Makefile, maketar.pl: replaced maketar.pl with tar,
  get versioned files from git

* Makefile, win32/Makefile: simplified asciidoc calls using pipes

* asap.h, csharp/ASAP.ppcs, flash/ASAP_ModuleInfo.as,
  java/ASAP_ModuleInfo.java, javascript/asap.ppjs:
  song_pos size changed from 128 to ASAP_SONGS_MAX

* win32/xmplay/xmp-asap.c: close files so that "File information" works

* asapconv.c, PORTS.xml: options to set TIME in SAP


2010-01-25  Piotr Fusik  <fox@scene.pl>
* win32/xmplay/xmp-asap.c, win32/xmplay/xmpfunc.h, win32/xmplay/xmpin.h,
  win32/gui.rc, win32/Makefile, win32/setup/asap.wxs, README, win32/USAGE,
  PORTS.xml: XMPlay plugin
